add jvm memory model